Fixed flicker bug when loading the page

--- a/static/css/get_recipe.css
+++ b/static/css/get_recipe.css
@@ -65,7 +65,14 @@ footer {
     width: 30vw;
 }
 
-.time__preparation {
+.time__clock {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.time__preparation, .time__clock {
     margin-left: 32.5vw;
     width: 40vw;
 }
@@ -105,6 +112,10 @@ footer {
     justify-content: center;
     height: 50px;
     background: #f26226;
+    
+}
+
+.alert__box, .alert__description {
     width: 50vw;
     margin-left: 25vw;
 }
